force-app/main/default/objects/Promo_Budget__c/Promo_Budget__c.object-meta.xml
<CustomObject>
    <label>Promo Budget</label>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promo Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>