force-app/main/default/objects/Promo_Budget__c/fields/Allocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Amount__c</fullName>
    <label>Allocated Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>