force-app/main/default/objects/Promo_Budget__c/fields/Spent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spent_Amount__c</fullName>
    <label>Spent Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>